# CourseProject1

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  spending_by_category.csv  user_settings.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
src/: external_api.py  operations_filters.py  reports.py  services.py  utils.py  views.py
tests/: test_external_api.py  test_reports.py  test_services.py  test_utils.py  test_views.py
